# chess-ai

./: .gitignore  LichessAPI.py  NOTICE  README.md  app.py  chess_ai.py  maia_model_test.py  model.py  my_chess_model.h5  prep_data.py  print_tensor.py  pyproject.toml  requirements.txt  tensor.py
docs/: architecture.md  ml-pipeline.md
maia/tf2/: net.ipynb
models/: mymodel2.h5
src/chess_ai/: paths.py
src/chess_ai/data/: lichess_api.py  prep_data.py
src/chess_ai/engine/: app.py
src/chess_ai/gui/: game.py
src/chess_ai/ml/: maia_model.py  model.py  print_tensor.py  tensor.py
tests/: test_engine.py
